--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.13.3",
     "fs-extra": "^4.0.3",
     "lodash": "^4.17.4",
+    "moment": "^2.19.3",
     "mongoose": "^4.1.7",
     "multer": "^1.3.0",
     "nodemon": "^1.11.0",
